# jdcal

./: .gitignore  .travis.yml  CHANGELOG.txt  CONTRIBUTORS.txt  MANIFEST  MANIFEST.in  README.rst  jdcal.py  setup.cfg  setup.py  test_jdcal.py  tox.ini
.github/workflows/: ci.yml
src/jdcal/: __init__.py  jdcal.py
